# music_player

./: .env  Cargo.toml  db.sql
migrations/: 20250124082845_track_init.up.sql  20250124084234_playlist_init.up.sql
src/: db.rs  lib.rs  main.rs  playlist.rs  track.rs  utils.rs
src/models/: mod.rs  playlist_model.rs  track_model.rs
