[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
iced = { version = "0.13.1", features = ["tokio"] }
lofty = "0.22.1"
rfd = "0.13"
rodio = "0.20.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["uuid", "sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "rt", "sync", "time"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
